...
        viewModel.query = ""
    }

    LazyVerticalGrid(
        modifier = modifier
            .fillMaxSize()
            .testTag("catBreedList"),
        columns = GridCells.Adaptive(minSize = 150.dp),
        contentPadding = PaddingValues(horizontal = 16.dp, vertical = 16.dp),
        verticalArrangement = Arrangement.spacedBy(32.dp),
        horizontalArrangement = Arrangement.spacedBy((16).dp)
    ) {
        item(span = { GridItemSpan(maxLineSpan) }) {
...
    Column(
        modifier = modifier
            .fillMaxWidth()
            .clickable(
                onClick = { onClick() }
            )
            .testTag("searchResult"),
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        Image(
            painter = painterResource(imageUrl),
            contentDescription = name,
            contentScale = ContentScale.Crop,
...
